# rec_survey

./: README.md  pyproject.toml
notebook/:  Transformers4Rec.ipynb  create_dataset.ipynb  create_dataset_anime.ipynb  create_dataset_rating.ipynb  fastfm.ipynb  lightfm.ipynb  note.md  scikit-learn.ipynb  scikit-surprise.ipynb  tfrs.ipynb
